package com.unina.project;

public class AreaTematica {
    public void setTag(String tag) {
        this.tag = tag;
    }

    public String getTag() {
        return tag;
    }

    private String tag;
}
